--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -16,7 +16,6 @@
     <meta name="twitter:title" content="Joseph Rey Alquisola">
     <meta name="twitter:description" content="Senior Software Engineer. Certified Google Adwords Specialist. Certified Google Analytics Expert.">
     <meta name="twitter:image" content="<%= asset_path 'profile.jpg'%>">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
 
     <title>Joseph Rey Alquisola</title>
 
@@ -57,7 +56,7 @@
         <div class="row centered">
           <div class="col-lg-12">
             <h1>Joseph Rey Alquisola</h1>
-            <h3>Senior Software Engineer | Online Marketer</h3>
+            <h3>Senior Software Engineer | Certified Google Adwords & Analytics Specialist</h3>
           </div><!--/.col-lg-12 -->
         </div><!--/.row -->
       </div><!--/.container -->
@@ -71,7 +70,7 @@
             <h5>ABOUT</h5>
           </div>
           <div class="col-lg-6">
-            <p>A Mathematics graduate who works as Senior Software Developer with 9 years of professional experience both in software and web development. A passionate developer whose interests are solving real world problems and analysing large data set. A highly-motivated individual who continues to grow his expertise by learning new technologies. On his spare time, he develops marketing strategies and analyze campaign effectiveness to achieved advertisers' business goals.
+            <p>A Mathematics graduate who works as Senior Software Developer with 9 years of professional experience both in software and web development. A passionate developer who loves solving real world problems and analysing large data set. A highly-motivated individual who continues to grow his expertise by learning new technologies. On his spare time, he develops marketing strategies and analyze campaign effectiveness to achieved advertisers' business goals.
             </p>
           </div>
           <div class="col-lg-3">
@@ -438,7 +437,34 @@
     <div class="col-lg-2 col-lg-offset-1">
       <h5>PORTFOLIO</h5>
     </div>
+
     <div class="col-lg-6">
+      <p><%= image_tag 'besthaven.png', class: 'img-responsive'%></p>
+    </div>
+    <div class="col-lg-3">
+        <p><a href='http://www.mybesthaven.com' target='_blank'>MyBestHaven</a></p>
+      <p><more>A platform for real estate developers and agents to market their
+          projects.<br/><br/>
+          <sm><i class="icon-tag"></i> web developer</sm>
+          <sm><i class="icon-tag"></i> web analyst</sm>
+          <sm><i class="icon-tag"></i> campaign manager</sm>
+          </more>
+      </p>
+    </div>
+
+    <div class="col-lg-6 col-lg-offset-3">
+      <p><%= image_tag 'smdcinvestments.png', class: 'img-responsive'%></p>
+    </div>
+    <div class="col-lg-3">
+        <p><a href='http://www.smdcinvestments.com' target='_blank'>SMDC Investments</a></p>
+      <p><more>A real estate website owned by a Filipino broker. It is a
+          platform for the broker and its customer to collaborate, discuss and
+          share specific Philippine property.<br/><br/>
+       <sm><i class="icon-tag"></i> web developer, web analyst</sm></more> 
+      </p>
+    </div>
+
+    <div class="col-lg-6 col-lg-offset-3">
       <p><%= image_tag 'pocketmath.png', class: 'img-responsive'%></p>
     </div>
     <div class="col-lg-3">
@@ -481,28 +507,6 @@ access to the world's supply of mobile real-time bidding (RTB) inventory!
       </p>
     </div>
 
-    <div class="col-lg-6 col-lg-offset-3">
-      <p><%= image_tag 'smdcinvestments.png', class: 'img-responsive'%></p>
-    </div>
-    <div class="col-lg-3">
-        <p><a href='http://www.smdcinvestments.com' target='_blank'>SMDC Investments</a></p>
-      <p><more>A real estate website owned by a Filipino broker. It is a
-          platform for the broker and its customer to collaborate, discuss and
-          share specific Philippine property.<br/><br/>
-       <sm><i class="icon-tag"></i> web developer</sm></more> 
-      </p>
-    </div>
-
-    <div class="col-lg-6 col-lg-offset-3">
-      <p><%= image_tag 'smdcinvestments.png', class: 'img-responsive'%></p>
-    </div>
-    <div class="col-lg-3">
-        <p><a href='http://www.mybesthaven.com' target='_blank'>MyBestHaven</a></p>
-      <p><more>A platform for real estate developers and agents to market their
-          projects.<br/><br/>
-       <sm><i class="icon-tag"></i> web developer</sm></more> 
-      </p>
-    </div>
   </div><!--/.row -->
   <br>
   <br>
