user font-awesome gem

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -22,6 +22,7 @@
     <%= stylesheet_link_tag    'profile', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'profile', 'data-turbolinks-track' => true %>
 
+    <link rel='shortcut icon' href="<%= asset_path 'me.jpeg'%>">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
@@ -38,10 +39,10 @@
           <div class="row">
             <div class="dropdown">
               <ul id="nav" class="nav">
-                <li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="icon-user"></i></a></li>
-                <li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="icon-file"></i></a></li>
-                <li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="icon-briefcase"></i></a></li>
-                <li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
+                <li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="fa fa-user"></i></a></li>
+                <li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="fa fa-file"></i></a></li>
+                <li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="fa fa-briefcase"></i></a></li>
+                <li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="fa fa-envelope"></i></a></li>
               </ul><!--/ uL#nav -->
             </div><!-- /.dropdown -->
             <div class="clear"></div>
@@ -182,7 +183,7 @@
 
     <div class="col-lg-6">
       <p>
-        <t><a href='https://www.google.com/partners/?authuser=1#i_profile;idtf=115979796804121259839;'>Google Adwords Certification</a></t><br/>
+        <t><a href='https://www.google.com/partners/?authuser=1#i_profile;idtf=115979796804121259839;' target='_blank'>Google Adwords Certification</a></t><br/>
       </p>
     </div>
 
@@ -192,7 +193,7 @@
 
     <div class="col-lg-6 col-lg-offset-3">
       <p>
-        <t><a href='https://www.google.com/partners/?authuser=1#i_profile;idtf=115979796804121259839;'>Google Analytics Certification</a></t><br/>
+        <t><a href='https://www.google.com/partners/?authuser=1#i_profile;idtf=115979796804121259839;' target='_blank'>Google Analytics Certification</a></t><br/>
       </p>
     </div>
 
@@ -445,9 +446,9 @@
         <p><a href='http://www.mybesthaven.com' target='_blank'>MyBestHaven</a></p>
       <p><more>A platform for real estate developers and agents to market their
           projects.<br/><br/>
-          <sm><i class="icon-tag"></i> web developer</sm>
-          <sm><i class="icon-tag"></i> web analyst</sm>
-          <sm><i class="icon-tag"></i> campaign manager</sm>
+          <sm><i class="fa fa-tag"></i> web developer</sm>
+          <sm><i class="fa fa-tag"></i> web analyst</sm>
+          <sm><i class="fa fa-tag"></i> campaign manager</sm>
           </more>
       </p>
     </div>
@@ -460,7 +461,7 @@
       <p><more>A real estate website owned by a Filipino broker. It is a
           platform for the broker and its customer to collaborate, discuss and
           share specific Philippine property.<br/><br/>
-       <sm><i class="icon-tag"></i> web developer, web analyst</sm></more> 
+       <sm><i class="fa fa-tag"></i> web developer, web analyst</sm></more> 
       </p>
     </div>
 
@@ -474,7 +475,7 @@
 and mobile websites - all in real-time. In one platform, you gain immediate
 access to the world's supply of mobile real-time bidding (RTB) inventory!
             <br/><br/>
-          <sm><i class="icon-tag"></i> web developer</sm></more> 
+          <sm><i class="fa fa-tag"></i> web developer</sm></more> 
         </p>
     </div>
 
@@ -488,7 +489,7 @@ access to the world's supply of mobile real-time bidding (RTB) inventory!
           download feature-length movies, short films, and TV shows in Hindi,
           Tamil, Telugu, and other Indian regional languages. The service is
           available worldwide.<br/><br/>
-        <sm><i class="icon-tag"></i> web developer</sm></more> 
+        <sm><i class="fa fa-tag"></i> web developer</sm></more> 
       </p>
     </div>
 
@@ -503,7 +504,7 @@ access to the world's supply of mobile real-time bidding (RTB) inventory!
           medical specialists to access and store medical data of patients that
           has chronic diseases such as diabetes, COPD and CVRM. These allow them
           to collaborate and provide the ideal patient care.<br/><br/>
-       <sm><i class="icon-tag"></i> software developer</sm></more> 
+       <sm><i class="fa fa-tag"></i> software developer</sm></more> 
       </p>
     </div>
 
@@ -533,9 +534,9 @@ access to the world's supply of mobile real-time bidding (RTB) inventory!
       <div class="col-lg-3">
         <p><sm>SOCIAL LINKS</sm></p>
         <p>
-          <a href="https://twitter.com/jalquisola" target='_blank'><i class="icon-twitter"></i></a>
-          <a href="https://sg.linkedin.com/in/jralquisola" target='_blank'><i class="icon-linkedin"></i></a>
-          <a href="https://github.com/jalquisola" target='_blank'><i class="icon-github"></i></a>
+          <a href="https://twitter.com/jalquisola" target='_blank'><i class="fa fa-twitter"></i></a>
+          <a href="https://sg.linkedin.com/in/jralquisola" target='_blank'><i class="fa fa-linkedin"></i></a>
+          <a href="https://github.com/jalquisola" target='_blank'><i class="fa fa-github"></i></a>
         </p>
       </div>
     </div><!--/.row -->
