python machine learning page

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -542,8 +542,6 @@ access to the world's supply of mobile real-time bidding (RTB) inventory!
     </div><!--/.row -->
   </div><!--/.container -->
 </div><!--/ #footer -->
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+  <%= render partial: "misc/google_analytics"%>
   </body>
 </html>
