update online resume

--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -56,8 +56,8 @@
       <div class="container">
         <div class="row centered">
           <div class="col-lg-12">
-            <h1>Joseph Rey Alquisola</h1>
-            <h3>Senior Software Engineer | Certified Google Adwords & Analytics Specialist</h3>
+            <h1>Joseph Alquisola</h1>
+            <h3>Senior Software Engineer | Data Scientist | Certified Google Adwords & Analytics Expert</h3>
           </div><!--/.col-lg-12 -->
         </div><!--/.row -->
       </div><!--/.container -->
@@ -71,7 +71,14 @@
             <h5>ABOUT</h5>
           </div>
           <div class="col-lg-6">
-            <p>A Mathematics graduate who works as Senior Software Developer with 9 years of professional experience both in software and web development. A passionate developer who loves solving real world problems and analysing large data set. A highly-motivated individual who continues to grow his expertise by learning new technologies. On his spare time, he develops marketing strategies and analyze campaign effectiveness to achieved advertisers' business goals.
+            <p>
+                6+ year’s professional experience managing development and deployment of web applications and APIs using Ruby on Rails(RoR) and ExpressJS. Delivered 97.5% of projects on time and reduce system architecture cost.
+            </p>
+            <p>
+                2+ year’s professional experience collecting, analyzing and evaluating large datasets using machine learning algorithms to understand trends, anomalies, opportunities and discover interesting insights that add business value.
+            </p>
+            <p>
+                Certified expert in optimizing search engine and mobile marketing campaigns in Google Adwords. Drove return on ad spend (ROAS) increases of 33% and more by understanding user behavior using Google Analytics Data.
             </p>
           </div>
           <div class="col-lg-3">
@@ -82,99 +89,7 @@
     </div><!--/ #intro -->
 
     <section id="resume" name="resume"></section>
-<!--WORK DESCRIPTION -->
-<div class="container desc">
-  <div class="row">
-    <div class="col-lg-2 col-lg-offset-1">
-      <h5>WORK</h5>
-    </div>
-    <div class="col-lg-6">
-      <p><t>Senior Software Engineer</t><br/>
-        Pocketmath Pte Ltd <br/>
-      </p>
-      <p><more>
-          <ul>
-            <li>Designed and rebuilt Pocketmath's vetting application into
-                service oriented architecture.</li>
-            <li>Developed and incorporated best practices with the team like test-driven
-                development methodology.</li>
-            <li>Refactored and organized client-side codes using latest
-                javascript frameworks.
-            </li>
-            <li>Worked closely with infrastructure team to solve DevOps problems.</li>
-            <li>Mentored junior engineers.</li>
-            <li>Applied expert system to current architecture to automate
-                business decisions.</li>
-          </ul>
-         </more></p>
-      </div>
-    <div class="col-lg-3">
-      <p><sm>DECEMBER 2013 - CURRENT</sm></p>
-    </div>
 
-    <div class="col-lg-6 col-lg-offset-3">
-      <p><t>Software Developer</t><br/>
-        Spuul Pte Ltd <br/>
-      </p>
-      <p><more>
-          <ul>
-            <li>Refactored and optimized code to develop features more effectively.</li>
-            <li>Integrated third party APIs such as Facebook, Google, Twitter and
-                payment gateway APIs such as Paypal, Ccavenue, Tappp and Qubecell.
-            </li>
-            <li>Developed rails application to display analytics for our content providers.</li>
-            <li>Designed data relationships to improve database performance.</li>
-            <li>Designed, implemented and deployed REST services.</li>
-          </ul>
-          </more></p>
-    </div>
-    <div class="col-lg-3">
-      <p><sm>NOVEMBER 2012 - NOVEMBER 2013</sm></p>
-    </div>
-
-    <div class="col-lg-6 col-lg-offset-3">
-      <p><t>Software Developer</t><br/>
-        Caresharing Inc. <br/>
-      </p>
-      <p><more>
-          <ul>
-            <li>Developed interactive features using emerging technologies in web environments.</li>
-            <li>Optimized activerecord queries to reduce database transactions.</li>
-            <li>Integrated healthcare APIs to existing RESTful api.</li>
-            <li>Maintained existing rails application.</li>
-          </ul>
-          </more>
-      </p>
-    </div>
-    <div class="col-lg-3">
-      <p><sm>JANUARY 2010 - NOVEMBER 2012</sm></p>
-    </div>
-
-    <div class="col-lg-6 col-lg-offset-3">
-      <p><t>Software Developer</t><br/>
-        NEC Telecom Software Philippines<br/>
-      </p>
-      <p><more>
-          <ul>
-            <li>Developed network card simulators using windows API in C++
-                classes(MFC) and .NET.
-            </li>
-            <li>Created scripts to automate testing of virtual target system.</li>
-            <li>Developed desktop applications using waterfall methodology.
-            </li>
-            <li>Designed and developed enhancements to existing applications.
-            </li>
-          </ul>
-          </more></p>
-    </div>
-    <div class="col-lg-3">
-      <p><sm>APRIL 2007 - JANUARY 2010</sm></p>
-    </div>
-  </div><!--/.row -->
-  <br>
-  <hr>
-</div><!--/.container -->
-<!--Certifications  DESCRIPTION -->
 <div class="container desc">
   <div class="row">
     <div class="col-lg-2 col-lg-offset-1">
@@ -182,6 +97,16 @@
     </div>
 
     <div class="col-lg-6">
+      <p>
+          <t><a href='https://www.coursera.org/account/accomplishments/verify/NK9EAM22JG7P?trk=profile_certification_title' target='_blank'>Machine Learning<br/> Coursera Course Certificates<br/> License NK9EAM22JG7P</a></t><br/>
+      </p>
+    </div>
+
+    <div class="col-lg-3 ">
+      <p><sm>AUG 2016 - present</sm></p>
+    </div>
+
+    <div class="col-lg-6 col-lg-offset-3">
       <p>
         <t><a href='https://www.google.com/partners/?authuser=1#i_profile;idtf=115979796804121259839;' target='_blank'>Google Adwords Certification</a></t><br/>
       </p>
@@ -204,6 +129,173 @@
   <br>
   <hr>
 </div><!--/.container -->
+<div class="container desc">
+  <div class="row">
+    <div class="col-lg-2 col-lg-offset-1">
+      <h5>TECHNICAL EXPERTISE</h5>
+    </div>
+    <div class="col-lg-9">
+      <p><t>Programming Languages</t><br/>
+      </p>
+      <p><more>
+          <ul>
+              <li>Ruby, Javascript, Python, Go, Java, C++</li>
+          </ul>
+          </more>
+      </p>
+    </div>
+    <div class="col-lg-9 col-lg-offset-3">
+      <p><t>Web Frameworks</t><br/>
+      </p>
+      <p><more>
+          <ul>
+              <li>Ruby on Rails, ExpressJS</li>
+          </ul>
+          </more>
+      </p>
+    </div>
+    <div class="col-lg-9 col-lg-offset-3">
+      <p><t>Data Analysis Tools</t><br/>
+      </p>
+      <p><more>
+          <ul>
+              <li>Pandas, NumPy, Scikit-learn, Matplotlib, Spark</li>
+          </ul>
+          </more>
+      </p>
+    </div>
+    <div class="col-lg-9 col-lg-offset-3">
+      <p><t>Database</t><br/>
+      </p>
+      <p><more>
+          <ul>
+              <li>MySQL, PostgreSQL, Redis, MongoDB</li>
+          </ul>
+          </more>
+      </p>
+    </div>
+    <div class="col-lg-9 col-lg-offset-3">
+      <p><t>Javascript Frameworks</t><br/>
+      </p>
+      <p><more>
+          <ul>
+              <li>ReactJS, Angular, Backbone</li>
+          </ul>
+          </more>
+      </p>
+    </div>
+    <div class="col-lg-9 col-lg-offset-3">
+      <p><t>Testing Tools</t><br/>
+      </p>
+      <p><more>
+          <ul>
+              <li>RSpec, Capybara, Jasmine, Test Unit</li>
+          </ul>
+          </more>
+      </p>
+    </div>
+    <div class="col-lg-9 col-lg-offset-3">
+      <p><t>Deployment Tools</t><br/>
+      </p>
+      <p><more>
+          <ul>
+              <li>Amazon Web Services Opsworks, Docker, Chef, Capistrano</li>
+          </ul>
+          </more>
+      </p>
+    </div>
+  </div><!--/.row -->
+  <br>
+  <hr>
+</div><!--/.container -->
+<!--WORK DESCRIPTION -->
+<div class="container desc">
+  <div class="row">
+    <div class="col-lg-2 col-lg-offset-1">
+      <h5>WORK</h5>
+    </div>
+    <div class="col-lg-6">
+      <p><t>Senior Software Engineer</t><br/>
+        Pocketmath Pte Ltd <br/>
+      </p>
+      <p><more>
+          <ul>
+            <li>Detected 50% of bad adverts by creating a classification model that detects and rejects bad adverts.</li>
+            <li>Developed an Application Programming Interface (API) to automate the testing of adverts.</li>
+            <li>Spearheaded the development and deployment of PocketMath’s Vetting System using Ruby on Rails, NodeJS and Amazon Web Services.
+            </li>
+            <li>
+                Mentored members of Brand Safety Team regarding creative policies and business rules.
+            </li>
+            <li>Generated 27% more leads and reduced advertising costs by optimizing Google Adwords campaigns through search term report monitoring and landing pages A/B testing.</li>
+            <li>Gathered reports data from different advertising platforms, such as, Twitter, Facebook, Google Adwords and provided insights to stakeholders which platforms are giving as effective return on ad spend (ROAS).</li>
+          </ul>
+         </more></p>
+      </div>
+    <div class="col-lg-3">
+      <p><sm>DECEMBER 2013 - CURRENT</sm></p>
+    </div>
+
+    <div class="col-lg-6 col-lg-offset-3">
+      <p><t>Software Developer</t><br/>
+        Spuul Pte Ltd <br/>
+      </p>
+      <p><more>
+          <ul>
+            <li>Refactored RoR application programming interface code resulting 22% improvement on the response time.</li>
+            <li>Managed database complex SQL queries by adding new tables and indexes, and by breaking it down to simple SQL queries.
+            </li>
+            <li>Build trust with content providers by developing a Ruby on Rails web application where they can view reports and graphs of their content.</li>
+            <li>Integrated social media APIs such as Facebook, Google+, Twitter and payment gateways APIs such as Paypal, Tappp, Ccavenue, and Qubecell.</li>
+          </ul>
+          </more></p>
+    </div>
+    <div class="col-lg-3">
+      <p><sm>NOVEMBER 2012 - NOVEMBER 2013</sm></p>
+    </div>
+
+    <div class="col-lg-6 col-lg-offset-3">
+      <p><t>Software Developer</t><br/>
+        Caresharing Inc. <br/>
+      </p>
+      <p><more>
+          <ul>
+            <li>Analyzed business specifications and turned them into technical specifications.</li>
+            <li>Optimized existing Ruby on Rails web application by refactoring complex codes and adding indexes to MySQL database tables.</li>
+            <li>Built interactive and responsive web applications using Backbone, Underscore and jQuery.</li>
+            <li>Contributed to the team in building our application programming interface(API).</li>
+          </ul>
+          </more>
+      </p>
+    </div>
+    <div class="col-lg-3">
+      <p><sm>JANUARY 2010 - NOVEMBER 2012</sm></p>
+    </div>
+
+    <div class="col-lg-6 col-lg-offset-3">
+      <p><t>Software Developer</t><br/>
+        NEC Telecom Software Philippines<br/>
+      </p>
+      <p><more>
+          <ul>
+            <li>Analyzed business specifications and turned them into technical specifications.
+            </li>
+            <li>Improved productivity by creating scripts written in C to automate testing of a virtual target system.</li>
+            <li>Built software, such as desktop applications and network card simulators using waterfall development.      </li>
+            <li>
+                Played a key role in the team by designing application architecture.
+            </li>
+          </ul>
+          </more></p>
+    </div>
+    <div class="col-lg-3">
+      <p><sm>APRIL 2007 - JANUARY 2010</sm></p>
+    </div>
+  </div><!--/.row -->
+  <br>
+  <hr>
+</div><!--/.container -->
+<!--Certifications  DESCRIPTION -->
 <!--EDUCATION DESCRIPTION -->
 <div class="container desc">
   <div class="row">
@@ -293,144 +385,8 @@
     </div>
   </div><!--/.row -->
   <br>
+  <hr>
 </div><!--/.container -->
-<!--SKILLS DESCRIPTION -->
-<div id="skillswrap">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-2 col-lg-offset-1">
-        <h5>SKILLS</h5>
-      </div>
-      <div class="col-lg-3 centered">
-        <canvas id="ror" height="130" width="130"></canvas>
-        <p>Ruby on Rails</p>
-        <br>
-        <script>
-          var doughnutData = [
-            {
-              value: 95,
-              color:"#1abc9c",
-              highlight:"#1abc9c"
-            },
-            {
-              value : 5,
-              color : "#ecf0f1",
-              highlight : "#ecf0f1"
-            }
-          ];
-          var myDoughnut = new Chart(document.getElementById("ror").getContext("2d")).Pie(doughnutData);
-        </script>
-      </div>
-
-      <div class="col-lg-3 centered">
-        <canvas id="aws" height="130" width="130"></canvas>
-        <p>Amazon Web Services</p>
-        <br>
-        <script>
-          var doughnutData = [
-            {
-              value: 90,
-              color:"#1abc9c",
-              highlight:"#1abc9c"
-            },
-            {
-              value : 10,
-              color : "#ecf0f1",
-              highlight : "#ecf0f1"
-            }
-          ];
-          var myDoughnut = new Chart(document.getElementById("aws").getContext("2d")).Pie(doughnutData);
-        </script>
-      </div>
-
-      <div class="col-lg-3 centered">
-        <canvas id="wordpress" height="130" width="130"></canvas>
-        <p>Linux</p>
-        <br>
-        <script>
-          var doughnutData = [
-            {
-              value: 90,
-              color:"#1abc9c",
-              highlight:"#1abc9c"
-            },
-            {
-              value : 10,
-              color : "#ecf0f1",
-              highlight : "#ecf0f1"
-            }
-          ];
-          var myDoughnut = new Chart(document.getElementById("wordpress").getContext("2d")).Pie(doughnutData);
-        </script>
-      </div>
-
-      <div class="col-lg-3 col-lg-offset-3 centered">
-        <canvas id="html" height="130" width="130"></canvas>
-        <p>NodeJS</p>
-        <br>
-        <script>
-          var doughnutData = [
-            {
-              value: 90,
-              color:"#1abc9c",
-              highlight:"#1abc9c"
-            },
-            {
-              value : 10,
-              color : "#ecf0f1",
-              highlight : "#ecf0f1"
-            }
-          ];
-          var myDoughnut = new Chart(document.getElementById("html").getContext("2d")).Pie(doughnutData);
-        </script>
-      </div>
-
-      <div class="col-lg-3 centered">
-        <canvas id="backbone" height="130" width="130"></canvas>
-        <p><strong>Javascript </strong><br><small>(Backbonejs, React)</small></p>
-        <br>
-        <script>
-          var doughnutData = [
-            {
-              value: 95,
-              color:"#1abc9c",
-              highlight:"#1abc9c"
-            },
-            {
-              value : 5,
-              color : "#ecf0f1",
-              highlight : "#ecf0f1"
-            }
-          ];
-          var myDoughnut = new Chart(document.getElementById("backbone").getContext("2d")).Pie(doughnutData);
-        </script>
-      </div>
-
-      <div class="col-lg-3 centered">
-        <canvas id="nodejs" height="130" width="130"></canvas>
-        <p><strong>Database</strong><br><small>(MySQL, Postgres, MongoDB, Redis)</small></p>
-        <br>
-        <script>
-        var doughnutData = [
-          {
-            value: 90,
-            color:"#1abc9c",
-            highlight:"#1abc9c"
-          },
-          {
-            value : 10,
-            color : "#ecf0f1",
-            highlight : "#ecf0f1"
-          }
-        ];
-        var myDoughnut = new Chart(document.getElementById("nodejs").getContext("2d")).Pie(doughnutData);
-        </script>
-      </div>
-    </div><!--/.row -->
-  <br>
-  </div><!--/.container -->
-</div><!--/ #skillswrap -->
-
 <section id="work" name="work"></section>
 <!--PORTFOLIO DESCRIPTION -->
 <div class="container desc">
