--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -165,7 +165,7 @@
       </p>
     </div>
     <div class="col-lg-9 col-lg-offset-3">
-      <p><t>Database</t><br/>
+      <p><t>Databases</t><br/>
       </p>
       <p><more>
           <ul>
@@ -220,7 +220,7 @@
       </p>
       <p><more>
           <ul>
-            <li>Detected 50% of bad adverts by creating a classification model that detects and rejects bad adverts.</li>
+            <li>Detected 50% of bad adverts by creating a classification model that detects and rejects malicious adverts.</li>
             <li>Developed an Application Programming Interface (API) to automate the testing of adverts.</li>
             <li>Spearheaded the development and deployment of PocketMath’s Vetting System using Ruby on Rails, NodeJS and Amazon Web Services.
             </li>
